Home page heading color contrast fix

--- a/css/index.css
+++ b/css/index.css
@@ -607,7 +607,7 @@ label {
   min-width: 100%;
   object-fit: cover;
   object-position: 50% 50%;
-  opacity: 0.5;
+  opacity: 0.8;
 }
 
 .promoted-articles__content {
@@ -627,11 +627,12 @@ label {
 }
 
 .promoted-articles__title {
-  color: rgba(255, 234, 43, 1);
+  color: rgba(255, 255, 255, 1);
   font-family: "Futura", Arial, Helvetica, sans-serif;
   font-size: 3rem;
   font-weight: 700;
   line-height: 1.1;
+  padding-bottom: 2rem;
   text-transform: uppercase;
 }
 
